<resources>
    <string name="app_name">ExpensesTracker</string>

    <string name="add_fragment_title">Add Item</string>
    <string name="edit_fragment_title">Edit Item</string>
    <string name="item_detail_fragment_title">Item Details</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="clear_question">Are you sure you want to clear transactions?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="compulsory">Compulsory</string>
    <string name="notCompulsory">Not compulsory</string>
    <string name="InputError">Input error</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_title">Home</string>
    <string name="list_title">List</string>
    <string name="settings_title">Settings</string>
    <string name="save_button">Save</string>
    <string name="price_hint">Price</string>
    <string name="category_hint">Category</string>
    <string name="home_fragment_title">Home</string>
    <string name="list_fragment_title">List</string>
    <string name="settings_fragment_title">Settings</string>
    <string name="chart_fragment_title">Chart</string>
    <string name="detail_fragment_title">Details</string>
    <string name="date">Date</string>
    <string name="change">Change</string>
    <string name="delete">Delete</string>
    <string name="edit_item">Edit item</string>
    <string name="item">Item</string>
    <string name="done">Done</string>
    <string name="close">Close</string>
    <string name="compulsory_expense">Compulsory expense</string>
    <string name="incompulsory_expense">Not compulsory expense</string>
    <string name="add_new_item">Add new item</string>
    <string name="total_balance">Total balance</string>
    <string name="total_income">Total income</string>
    <string name="total_expense">Total expense</string>
    <string name="expenses_by_category">Expenses by category</string>
    <string name="edit">Edit</string>
    <string name="transaction_type">Transaction type</string>
    <string name="clear_transactions">Clear transactions</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="description_hint">Description</string>
    <string name="expenses_amount">Expenses amount</string>
    <string name="dear_user">Dear user!</string>
    <string name="dont_forget_remind">Don\'t forget about adding transactions</string>
    <string name="remaining_balance">Remaining balance</string>
    <string name="total_expenses">Total expenses</string>
    <string name="ui_theme">UI theme</string>
    <string name="spend_frequency">Spend frequency</string>
    <string name="secret_fragment_title">Secret</string>


    <string-array name="expense_categories">
        <item>Other</item>
        <item>Misc</item>
        <item>Food</item>
        <item>Yummy</item>
        <item>Health</item>
        <item>Rent</item>
        <item>Home</item>
        <item>Transport</item>
        <item>Gifts</item>
        <item>Entertainment</item>
    </string-array>

    <string-array name="income_categories">
        <item>Other</item>
        <item>Salary</item>
        <item>Gift</item>
        <item>Scholarship</item>
    </string-array>

    <string-array name="transaction_types">
        <item>All transactions</item>
        <item>Expenses</item>
        <item>Incomes</item>
    </string-array>

</resources>